# MillBot

./: dune-project  mill.opam
_build/: .db  .digest-db  log
_build/default/: .ocamlformat  README.md  mill.dune-package  mill.install  mill.opam
_build/default/lib/: arena.ml  arena.mli  mill.cma  mill.cmxa  mill.cmxs  mill.ml-gen
_build/default/lib/.formatted/: engine.ml  engine.mli  my_player.ml
_build/default/lib/.merlin-conf/: lib-mill
_build/default/lib/.mill.objs/: mill__Arena.impl.d  mill__Arena.intf.all-deps  mill__Arena.intf.d  mill__Engine.impl.d  mill__Engine.intf.d  mill__My_player.impl.d  mill__My_player.intf.d
_build/default/lib/.mill.objs/byte/: mill.cmi  mill.cmo  mill.cmt  mill__Arena.cmi  mill__Arena.cmo  mill__Arena.cmt  mill__Arena.cmti  mill__Engine.cmi  mill__Engine.cmo  mill__Engine.cmt  mill__Engine.cmti  mill__My_player.cmi  mill__My_player.cmo  mill__My_player.cmt  mill__My_player.cmti
_build/default/lib/.mill.objs/native/: mill.cmx  mill__Arena.cmx  mill__Engine.cmx  mill__My_player.cmx
_build/default/test/: dune
_build/default/test/.formatted/: test_arena.ml  test_engine.ml  utils.ml  utils.mli
_build/default/test/.merlin-conf/: exe-test_arena-b13228cc345ec15963da55cfbaf70527
_build/default/test/.test_arena.eobjs/: dune__exe__Test_arena.impl.d  dune__exe__Test_engine.impl.d  dune__exe__Utils.impl.d  dune__exe__Utils.intf.d
_build/default/test/.test_arena.eobjs/byte/: dune__exe.cmi  dune__exe.cmo  dune__exe.cmt  dune__exe__Utils.cmi  (+5 more)
lib/: arena.ml  dune  my_player.ml  my_player.mli  my_player_minimax.mli
test/: dune
(+7 files in other folders)
